OAK-11105: remove ImmutableMap.of(a, b) - oak-segment-tar